<resources>
    <string name="app_name">Pomodoro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">My Profile</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work">Work</string>
    <string name="timer">10:00</string>
    <string name="stats">Stats</string>
    <string name="user">User</string>

    <color name="dark_grey">#212121</color>
    <color name="grey">#303030</color>
    <color name="light_grey">#424242</color>
    <color name="black">#000000</color>
    <color name="light_light_grey">#eaeaea</color>
    <color name="white">#FFFFFF</color>
    <color name="mGreen">#43A047</color>
    <color name="mDarkGreen">#1B5E20</color>
    <color name="mDarkRed">#b71c1c</color>
    <color name="mRed">#f44336</color>
    <color name="mtint">#8d01579b</color>


</resources>
