<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_light_grey"
        tools:context=".MainActivity">


    <!--<Button-->
            <!--android:text="@string/settings"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="37dp"-->
            <!--android:id="@+id/button_settings"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginEnd="24dp"-->
            <!--android:layout_marginRight="24dp"-->
            <!--android:layout_marginBottom="104dp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->

    <!--USEE!!!-->
    <android.support.design.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            app:cornerRadius="10dp"
            android:layout_centerInParent="true"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/button_settings" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"/>


    <!--Pending Material theme-->
    <!--<com.google.android.material.button.MaterialButton-->
            <!--android:id="@+id/material_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="asdf"/>-->

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:elevation="8dp"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/cardView">


        <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/writing_morning" />
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button android:layout_width="150dp" android:layout_height="37dp"
                    android:text="@string/work"
                    android:id="@+id/button_pomodoro"
                    android:elevation="0dp"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:typeface="normal" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="201dp"
            android:elevation="8dp"
            android:layout_margin="6dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_settings" android:id="@+id/cardView2"
            app:layout_constraintVertical_bias="0.48000002">


        <android.support.constraint.ConstraintLayout
                android:layout_width="180dp"
                android:layout_height="match_parent">

            <TextView
                    android:text="Best time to work:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:layout_marginTop="68dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textStyle="bold"/>
            <TextView
                    android:text="5:00pm - 7:00pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:layout_marginTop="108dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="27dp"
                    android:layout_height="35dp"
                    android:src="@drawable/profile_pic"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/userNameTextView"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp" android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Let's get working!"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/timeOfDayTextView"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp" android:layout_marginTop="30dp"
                    app:layout_constraintTop_toTopOf="parent" android:text="Good Afternoon"
                    android:textSize="10sp"/>
            <Button
                    android:text="@string/user"
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/button_user"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardView2"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChartMain"
                    android:layout_width="match_parent"
                    android:layout_height="158dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/weeklyStatsTextView">
            </com.github.mikephil.charting.charts.BarChart>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="18dp"
                      android:text="Weekly Stats" android:textStyle="bold"
                      app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="10dp"
                      android:id="@+id/weeklyStatsTextView" android:textColor="@color/black"/>
            <Button
                    android:text="@string/stats"
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:id="@+id/button_stats"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>