<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"

        tools:context=".TimerActivity">

    <TextView
            android:text="@string/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_countDown"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.277"
            android:textSize="80sp"/>
    <Button android:layout_width="100dp" android:layout_height="37dp" android:text="@string/start"
            android:id="@+id/button_start"
            android:layout_marginBottom="216dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>
    <!--<Button-->
            <!--android:id="@+id/button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="8dp"-->
            <!--android:onClick="showDialog"-->
            <!--android:text="Show Alert Dialog"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintHorizontal_bias="0.502"-->
            <!--android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>-->

    <Button android:layout_width="100dp"
            android:layout_height="37dp"
            android:text="@string/stop"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:id="@+id/button_stop"
            android:layout_marginBottom="216dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />
    <TextView
            android:text="TextView"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/workStatusTextView"
            android:textColor="@color/black" android:textSize="36sp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginLeft="30dp" android:layout_marginStart="30dp"
            app:layout_constraintHorizontal_bias="0.452"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/netPomodoroTextView"
            android:textColor="@color/black" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/currentProjectTextView"
            app:layout_constraintHorizontal_bias="0.4"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentProjectTextView"
            android:textColor="@color/black" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="68dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="Net Pomodoros: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/netPomodoroLabelTextView"
            android:textColor="@color/black" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.05" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/currentProjectLabelTextView"/>
    <TextView
            android:text="Current Project: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentProjectLabelTextView"
            android:textColor="@color/black" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginBottom="68dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/netPomodoroLabelTextView"
            app:layout_constraintVertical_bias="0.0" android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.15" android:id="@+id/view"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/currentProjectLabelTextView"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="Button"
            android:layout_width="161dp"
            android:layout_height="37dp"
            android:id="@+id/projectButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currentProjectLabelTextView" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"/>



    <!--<Button-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:text="Raised Color Button"-->
            <!--android:textSize="15sp"-->
            <!--android:backgroundTint="#1E9D96"-->
            <!--android:textColor="@android:color/background_light" />-->


</android.support.constraint.ConstraintLayout>